Updated schedule messages for goal types

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,6 +1,10 @@
 en:
   ownyourday: "ownyourday"
   today: "Today"
+  common:
+    time: "time"
+    times: "times"
+    and: "and"
   days_of_week:
     monday: "Monday"
     tuesday: "Tuesday"
@@ -21,5 +25,5 @@ en:
       times_per_week_label: "Times per week"
       days_of_week_label: "Particular days"
       daily_summary: "Your goal will be scheduled every day"
-      times_per_week_summary: "Your goal will be scheduled %{times} times per week"
+      times_per_week_summary: "Your goal will be scheduled %{times} %{unit} per week"
       day_of_week_summary: "Your goal will be scheduled %{days}"
