Goal creation form + controller + routing

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,4 +1,10 @@
 en:
+  helpers:
+    submit:
+      create: "Create"
+      update: "Update"
+    alert:
+      create_successful: 'Successfully created %{name}'
   ownyourday: "ownyourday"
   today: "Today"
   common:
