--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -35,3 +35,5 @@ en:
       times_per_week_summary: "Your goal will be scheduled %{times} %{unit} per week"
       day_of_week_summary: "Your goal will be scheduled %{days}"
       day_of_week_none_summary: "Your goal will not be scheduled"
+    create:
+      header: 'Create Goal'
