Created controller, routes, and button to nav to new adhoc task page

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -24,6 +24,8 @@ en:
     date:
       label: 'Select a date'
       button: "Select"
+    adhoc:
+      new: 'Add'
   goals:
     navigation: "Goals"
     header: "My Goals"
