Created AdHoc task model, implemented controller logic

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -26,6 +26,8 @@ en:
       button: "Select"
     adhoc:
       new: 'Add'
+    create:
+      header: 'Adhoc Task'
   goals:
     navigation: "Goals"
     header: "My Goals"
