Added streaks to view; updated streak calc for daily goal

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -22,6 +22,7 @@ en:
     sunday: "Sunday"
   tasks:
     navigation: "Tasks"
+    streak: "Streak"
     date:
       label: 'Select a date'
       button: "Select"
