Create feature flag or disallowing user signups; added user allow list to credentials

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -52,3 +52,7 @@ en:
     destroy:
       confirmation: 'Are you sure you want to delete %{name}?'
       success: 'Successfully deleted %{name}'
+  users:
+    registrations:
+      create:
+        disabled: 'Creating new accounts is currently disabled'
