Added link to sign up page from login page

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -55,4 +55,5 @@ en:
   users:
     registrations:
       create:
+        url_text: 'No account? Sign up here'
         disabled: 'Creating new accounts is currently disabled'
