Updated styling for sign up form; added sign_up validations; adder User model validations per Devise

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -55,5 +55,6 @@ en:
   users:
     registrations:
       create:
+        header: 'Sign up'
         url_text: 'No account? Sign up here'
         disabled: 'Creating new accounts is currently disabled'
