--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -35,9 +35,13 @@ en:
   milestones:
     navigation: 'Milestones'
     header: 'Milestone'
+    new_header: 'New %{goal_name} Milestone'
     no_active: 'No active milestone'
     active_header: 'Active'
     inactive_header: 'Completed'
+    new:
+      name_label: 'Name'
+      description_label: 'Description'
   goals:
     navigation: "Goals"
     header: "My Goals"
