--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -36,11 +36,13 @@ en:
     navigation: 'Milestones'
     header: 'Milestone'
     new_header: 'New %{goal_name} Milestone'
+    update_header: 'Update %{goal_name} Milestone'
     no_active: 'No active milestone'
     active_header: 'Active'
     inactive_header: 'Completed'
     new:
       name_label: 'Name'
+      completed_label: 'Completed'
       description_label: 'Description'
       active_milestone_error: 'Cannot create a milestone when an active milestone already exists'
   goals:
