Added milestone to task view

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -33,6 +33,7 @@ en:
     create:
       header: 'Adhoc Task'
   milestones:
+    milestone: 'Milestone'
     navigation: 'Milestones'
     header: 'Milestone'
     new_header: 'New %{goal_name} Milestone'
