--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,6 +2,7 @@ en:
   global:
     email_address: 'Email address'
     password: 'Password'
+    password_confirmation: 'Password confirmation'
     application_version: "app version: %{version} "
   helpers:
     submit:
