--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -4,6 +4,7 @@ en:
     password: 'Password'
     password_confirmation: 'Password confirmation'
     application_version: "app version: %{version} "
+    today: 'Today'
   helpers:
     submit:
       create: "Create"
