Added day complete prompt

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -32,6 +32,7 @@ en:
     navigation: "Tasks"
     streak: "Streak"
     no_tasks: 'No tasks scheduled for today.'
+    all_completed: 'Day completed.'
     date:
       label: 'Select a date'
       button: "Select"
