--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,6 +1,7 @@
 en:
   global:
     email_address: 'Email address'
+    time_zone: 'Time zone'
     password: 'Password'
     password_confirmation: 'Password confirmation'
     application_version: "app version: %{version} "
