--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,5 +1,7 @@
 en:
   global:
+    first_name: 'First name'
+    last_name: 'Last name'
     email_address: 'Email address'
     time_zone: 'Time zone'
     password: 'Password'
